# untroche-server

./: .gitignore  Cargo.toml  docker-compose.yml  nginx.conf
app/: Dockerfile.dev
app/common/: Cargo.toml
app/common/resource/style/: hamburger.css  hamburger_no_custom.css  notice.css
app/common/resource/ts/: ajax.ts  custom_elem.ts  funcs.ts  notice.ts  touchex.ts
app/common/src/: admin_guard.rs  cookie_session.rs  device.rs  error.rs  html_codec.rs  identity.rs  lib.rs  serialize.rs  state.rs  webhook.rs
app/erltod/: .env  Cargo.toml  database.sch
app/erltod/resource/: template.html
app/erltod/resource/html/profile/: battle.html  index.html
app/erltod/resource/html/user/: index.html  list.html
app/erltod/src/admin/: mod.rs
app/erltod/src/domain/: mod.rs  profile.rs  user.rs
app/erltod/src/utils/: error.rs  mod.rs  state.rs  template.rs
app/portal/: .env  Cargo.toml  database.sch  portal.sch  test.sch
app/portal/resource/: auth.html
app/portal/resource/html/: index.html  profile.html  register.html  report.html
app/portal/resource/html/user/: index.html  list.html
app/portal/resource/style/: common.css  entrance.css  form.css  header.css  help.css  info.css  view_transition.css
app/portal/resource/template/: base.html  popup.html
app/portal/resource/ts/: common.ts
app/portal/src/: lib.rs  main.rs  utils.rs
app/portal/src/admin/: mod.rs
app/portal/src/domain/: auth.rs  entry.rs  mod.rs  profile.rs  report.rs  user.rs
app/portal/src/types/: app_data.rs  error.rs  mod.rs  tag_format.rs
app/portal/src/utils/: app_data.rs  error.rs  mod.rs  page_params.rs  password.rs  tag_format.rs  template.rs
docs/: Form、Jsonの使い分け.md  README.md  ページ構成.md  ポータルログイン.md
lib/html-codec/: Cargo.toml
lib/html-codec/src/: lib.rs
lib/validation/: Cargo.toml
lib/validation/derive/: Cargo.toml
lib/validation/derive/src/: lib.rs  types.rs
lib/validation/src/: lib.rs
watcher/: Dockerfile.dev  compile.sh  tsconfig.json
