[workspace]
package = { edition = "2024", authors = ["untroche"] }
members = ["app/common", "app/erltod", "app/portal"]
resolver = "3"

[workspace.dependencies]
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = { version = "4.13.0", default-features = false, features = [
	"macros",
] }
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
common.path = "app/common"
env_logger = "0.11.9"
html-codec.path = "lib/html-codec"
liquid = "0.26.11"
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = "1.50.0"
validation.path = "lib/validation"
