[package]
name = "common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
actix-session.workspace = true
actix-web.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util = "0.3.32"
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
