[package]
name = "erltod"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
actix-session.workspace = true
actix-web.workspace = true
base64.workspace = true
chrono.workspace = true
common.workspace = true
env_logger.workspace = true
html-codec.workspace = true
liquid.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
validation.workspace = true
